# smearor-wrot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
service/debug-overlay/: Cargo.toml
service/debug-overlay/src/: api.rs  lib.rs  manager.rs  pointer.rs  renderer.rs
smearor-wrot-application/: Cargo.toml  resources.gresource.xml
smearor-wrot-application/src/: icon.rs  lib.rs  settings.rs
smearor-wrot-application/src/application/: app.rs  config.rs  env_initializer.rs  mod.rs
smearor-wrot-application/src/config/: application.rs  compositor.rs  env_vars.rs  gtk_application.rs  margins.rs  mod.rs  rotation.rs
smearor-wrot-application/src/keyboard/: layout.rs
smearor-wrot-application/src/settings/: dialog.rs  handler.rs  manager.rs  mod.rs
smearor-wrot-application/src/socket/: builder.rs  error.rs  manager.rs  mod.rs
smearor-wrot-child-process/: Cargo.toml
smearor-wrot-child-process/src/: env.rs  lib.rs  manager.rs
smearor-wrot-child-process/src/child_process/: child_process.rs  config.rs  error.rs  mod.rs  start_type.rs  state.rs  stdio.rs
smearor-wrot-child-process/src/socket/: builder.rs  error.rs  manager.rs  mod.rs  socket.rs
smearor-wrot-color/: Cargo.toml
smearor-wrot-color-mask/: Cargo.toml
smearor-wrot-color-mask/src/: color_mask.rs  config.rs  lib.rs  manager.rs  state.rs
smearor-wrot-color/src/: frequency.rs  lib.rs  rgb.rs  rgba.rs
smearor-wrot-compositor/: Cargo.toml
smearor-wrot-compositor-widget/: Cargo.toml
smearor-wrot-compositor-widget/src/: color.rs  config.rs  lib.rs  opengl_renderer.rs  paintable.rs  wayland_source.rs
smearor-wrot-compositor-widget/src/clipboard/: error.rs  host_clipboard.rs  sync_manager.rs  wayland_selection.rs
smearor-wrot-compositor-widget/src/color_mask/: mod.rs
smearor-wrot-compositor-widget/src/event_handler/: keyboard.rs  mouse.rs  touch.rs
smearor-wrot-compositor-widget/src/texture/: mod.rs
smearor-wrot-compositor-widget/src/widget/: mod.rs  widget.rs
smearor-wrot-compositor-widget/tests/: integration.rs
smearor-wrot-compositor/src/: compositor.rs  error.rs  lib.rs  logging.rs  winit.rs
smearor-wrot-compositor/src/background/: mod.rs  subsurface.rs  toplevel.rs
smearor-wrot-compositor/src/buffer/: import_export.rs  metadata.rs
smearor-wrot-compositor/src/callback/: commit.rs  mod.rs
smearor-wrot-compositor/src/clipboard/: handler.rs
smearor-wrot-compositor/src/color_mask/: error.rs  mask.rs  mod.rs  subsurface.rs  toplevel.rs
smearor-wrot-compositor/src/commit/: mod.rs  timing.rs
smearor-wrot-compositor/src/damage/: surface.rs
smearor-wrot-compositor/src/dialog/: handler.rs
smearor-wrot-compositor/src/dma/: allocator.rs  count.rs
smearor-wrot-compositor/src/frame/: count.rs
smearor-wrot-compositor/src/handlers/: buffer.rs  compositor.rs  data_device.rs  decoration.rs  dialog.rs  mod.rs  output.rs  seat.rs  shm.rs  xdg_shell.rs
smearor-wrot-compositor/src/input/: mod.rs
smearor-wrot-compositor/src/lifecycle/: shutdown.rs
smearor-wrot-compositor/src/margin/: handler.rs
smearor-wrot-compositor/src/message/: compositor_message.rs  mod.rs  sender.rs
smearor-wrot-compositor/src/output/: geometry.rs  mod.rs
smearor-wrot-compositor/src/popup/: handler.rs
smearor-wrot-compositor/src/render/: count.rs
smearor-wrot-compositor/src/subsurface/: handler.rs  model.rs
smearor-wrot-compositor/src/surface/: cache.rs  mapping.rs  query.rs
smearor-wrot-compositor/src/texture/: cache.rs  mod.rs  pixel_data.rs
smearor-wrot-compositor/src/wayland/: listener.rs
smearor-wrot-compositor/src/windows/: activation.rs  focus.rs  title.rs
smearor-wrot-core/: Cargo.toml
smearor-wrot-core/src/: compositor.rs  error.rs  lib.rs  logging.rs  winit.rs
smearor-wrot-core/src/background/: error.rs  subsurface.rs  toplevel.rs
smearor-wrot-core/src/buffer/: lifecycle.rs  mod.rs  tracking.rs
smearor-wrot-core/src/callback/: commit.rs  window_size.rs
smearor-wrot-core/src/clipboard/: error.rs  handler.rs
smearor-wrot-core/src/color_mask/: mask.rs  subsurface.rs  toplevel.rs
smearor-wrot-core/src/commit/: count.rs
smearor-wrot-core/src/damage/: mod.rs  output.rs  surface.rs
smearor-wrot-core/src/dma/: allocator.rs  buffer.rs  device.rs  error.rs  format.rs  mod.rs
smearor-wrot-core/src/frame/: mod.rs
smearor-wrot-core/src/handlers/: compositor.rs  data_device.rs  dmabuf.rs  mod.rs  seat.rs  shm.rs  viewporter.rs
smearor-wrot-core/src/input/: time.rs
smearor-wrot-core/src/lifecycle/: shutdown.rs
smearor-wrot-core/src/margin/: handler.rs
smearor-wrot-core/src/message/: compositor_message.rs
smearor-wrot-debug-overlay/: Cargo.toml
smearor-wrot-debug-overlay/src/: config.rs  handler.rs  lib.rs  manager.rs  pointer.rs  renderer.rs
smearor-wrot-geometry/: Cargo.toml
smearor-wrot-geometry/src/: lib.rs  margin.rs  position.rs
smearor-wrot-gtk/: Cargo.toml  color_mask_old.glsl
smearor-wrot-gtk/shaders/: color_mask.glsl
smearor-wrot-gtk/src/: config.rs  lib.rs  paintable.rs  wayland_source.rs  widget.rs
smearor-wrot-gtk/tests/: integration.rs
smearor-wrot-layer/: Cargo.toml
smearor-wrot-layer/src/: config.rs  lib.rs
smearor-wrot-margin/: Cargo.toml
smearor-wrot-margin/src/: config.rs  lib.rs  manager.rs
smearor-wrot-pie-menu/: Cargo.toml
smearor-wrot-pie-menu/src/: lib.rs
smearor-wrot-rotation/: Cargo.toml
smearor-wrot-rotation/src/: layer.rs  lib.rs  widget.rs
smearor-wrot-settings/: Cargo.toml
smearor-wrot-settings/src/: dialog.rs  handler.rs  lib.rs  manager.rs
smearor-wrot-test-client/: Cargo.toml
smearor-wrot-test-client/src/: main.rs
smearor-wrot-window/: Cargo.toml
smearor-wrot-window/src/: config.rs  lib.rs  manager.rs
smearor-wrot-wrapper/: Cargo.toml  config.example.toml  resources.gresource.xml
smearor-wrot-wrapper/src/: args.rs  config.rs  keyboard_layout.rs  main.rs  screenshot.rs  settings.rs  socket.rs
state/compositor/: Cargo.toml
state/compositor/src/: lib.rs  (+1 more)
state/debug-overlay/: Cargo.toml
state/layer-shell/: Cargo.toml
state/margin/: Cargo.toml
state/window/: Cargo.toml
(+276 files in other folders)
