[workspace]
resolver = "3"

members = [
    "smearor-wrot-core",
    "smearor-wrot-gtk",
    "smearor-wrot-rotation",
    "smearor-wrot-wrapper",
    "smearor-wrot-test-client"
]

[workspace.package]
version = "0.1.0"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/smearor/casilda-rs"
homepage = "https://smearor.io/"
rust-version = "1.87.0"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive"] }
glib = "0.22"
glib-unix = "0.22"
glib-sys = "0.22"
gobject-sys = "0.22"
gdk4 = "0.11"
gdk4-sys = "0.11"
gtk4 = "0.11"
gtk4-layer-shell = "0.8.0"
gtk4-sys = "0.11"
libc = "0.2"
miette = "7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
smithay = { version = "0.7", features = ["backend_winit", "desktop", "wayland_frontend"] }
system-deps = "7.0"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["ansi", "env-filter"] }
wayland-server = "0.31"
wayland-protocols = "0.32"
which = "8.0.2"
xkeysym = "0.2.1"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)', 'cfg(fn_traits)', 'cfg(unboxed_closures)'] }

[workspace.lints.clippy]
non_std_lazy_statics = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = "symbols"

#
