[package]
name = "smearor-wrot-application"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
atomic_float = { workspace = true }
dashmap = { workspace = true }
directories = { workspace = true }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smearor-wrot-child-process = { path = "../smearor-wrot-child-process" }
smearor-wrot-color-mask = { path = "../smearor-wrot-color-mask" }
smearor-wrot-compositor = { path = "../smearor-wrot-compositor" }
smearor-wrot-compositor-widget = { path = "../smearor-wrot-compositor-widget" }
smearor-wrot-model-geometry = { path = "../model/geometry" }
smearor-wrot-pie-menu = { path = "../smearor-wrot-pie-menu" }
smearor-wrot-settings = { path = "../smearor-wrot-settings" }
smearor-wrot-rotation = { workspace = true }
smearor-wrot-service-debug-overlay = { path = "../service/debug-overlay" }
smearor-wrot-state-compositor = { path = "../state/compositor" }
smearor-wrot-state-debug-overlay = { path = "../state/debug-overlay" }
smearor-wrot-state-keyboard = { path = "../state/keyboard" }
smearor-wrot-state-layer-shell = { path = "../state/layer-shell" }
smearor-wrot-state-margin = { path = "../state/margin" }
smearor-wrot-state-window = { path = "../state/window" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
which = { workspace = true }
