[package]
name = "smearor-wrot-child-process"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
smithay = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
which = { workspace = true }
