[package]
name = "smearor-wrot-compositor-widget"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
glib = { workspace = true }
gtk4 = { workspace = true }
glib-unix = { workspace = true }
glow = { workspace = true }
smearor-wrot-model-color = { path = "../model/color" }
smearor-wrot-color-mask = { path = "../smearor-wrot-color-mask" }
smearor-wrot-compositor = { path = "../smearor-wrot-compositor" }
smearor-wrot-child-process = { path = "../smearor-wrot-child-process" }
smearor-wrot-state-debug-overlay = { path = "../state/debug-overlay" }
smearor-wrot-service-debug-overlay = { path = "../service/debug-overlay" }
smearor-wrot-model-geometry = { path = "../model/geometry" }
smithay = { workspace = true, features = ["backend_winit", "backend_egl", "desktop", "wayland_frontend", "renderer_gl", "renderer_glow", "use_system_lib"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
