[package]
name = "smearor-wrot-compositor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
gbm = { workspace = true }
image = { workspace = true }
input-event-codes = { workspace = true }
miette = { workspace = true }
nix = { workspace = true }
smearor-wrot-model-color = { path = "../model/color" }
smearor-wrot-child-process = { path = "../smearor-wrot-child-process", features = ["smithay"] }
smearor-wrot-color-mask = { path = "../smearor-wrot-color-mask" }
smearor-wrot-model-geometry = { path = "../model/geometry", features = ["smithay"] }
smearor-wrot-state-keyboard = { path = "../state/keyboard" }
smearor-wrot-state-margin = { path = "../state/margin" }
smithay = { workspace = true, features = ["backend_winit", "desktop", "wayland_frontend", "renderer_gl", "use_system_lib"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xkeysym = { workspace = true }
