[package]
name = "smearor-wrot-debug-overlay"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
gtk4 = { workspace = true }
smearor-wrot-color = { path = "../smearor-wrot-color", features = ["gtk4"] }
smearor-wrot-geometry = { path = "../smearor-wrot-geometry", features = ["gtk4", "smithay"] }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[features]
default = []
