[package]
name = "smearor-wrot-geometry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
gtk4 = { workspace = true, optional = true }
smithay = { workspace = true, optional = true }
typed-builder = { workspace = true }

[features]
default = []
