[package]
name = "smearor-wrot-gtk"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
glib = { workspace = true }
gtk4 = { workspace = true }
smearor-wrot-core = { path = "../smearor-wrot-core" }
