[package]
name = "smearor-wrot-settings"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
gtk4 = { workspace = true }
smearor-wrot-state-debug-overlay = { path = "../state/debug-overlay" }
smearor-wrot-service-debug-overlay = { path = "../service/debug-overlay" }
smearor-wrot-rotation = { workspace = true }
smearor-wrot-state-keyboard = { path = "../state/keyboard" }
smearor-wrot-state-window = { path = "../state/window" }
smearor-wrot-compositor-widget = { path = "../smearor-wrot-compositor-widget" }
thiserror = { workspace = true }
typed-builder = { workspace = true }
tracing = { workspace = true }

[features]
default = []
