[package]
name = "smearor-wrot-window"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
atomic_float = { workspace = true }
gtk4 = { workspace = true }
smearor-wrot-geometry = { path = "../smearor-wrot-geometry" }
smearor-wrot-layer = { path = "../smearor-wrot-layer" }
typed-builder = { workspace = true }
