[package]
name = "smearor-wrot-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "smearor-wrot"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
directories = { workspace = true }
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smearor-wrot-core = { path = "../smearor-wrot-compositor" }
smearor-wrot-application = { path = "../smearor-wrot-application" }
smearor-wrot-gtk = { path = "../smearor-wrot-compositor-widget" }
smearor-wrot-model = { path = "../smearor-wrot-model" }
smearor-wrot-pie-menu = { path = "../smearor-wrot-pie-menu" }
smearor-wrot-rotation = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
which = { workspace = true }
