[package]
name = "smearor-wrot-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "smearor-wrot"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smearor-wrot-application = { path = "../smearor-wrot-application" }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
