[package]
name = "smearor-wrot-state-margin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { workspace = true }
thiserror = { workspace = true }
smearor-wrot-model-geometry = { path = "../../model/geometry" }
smearor-wrot-rotation = { workspace = true }
typed-builder = { workspace = true }
